tooling/nargo_cli/tests/snapshots/execution_success/regression_8926/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main() -> pub str<3> {
    let mut a: &mut str<3> = &mut "ABC";
    a = a;
    let mut idx_b: Field = 0;
    loop {
        if idx_b == 0 {
            break;
        }
    }
    *a
}
